2006-10-19  Per Bothner  <per@bothner.com>

	* TestMisc..java: Applying fn:string to a sequence of two or more items
	is invalid.  Use string() as a step instead.

	* TestMisc..java: The type syntax 'element(X,*)' is invalid.

	* RunXQTS.java (useComments): New flag.
	(writeVerbose): New helper method, for extra information.
	By default write them as comments.
	(evalTest): Use writeVerbose.

	* RunXQTS.java (contextItem): New field.
	(endGroup): Handle <contextItem>.
	(evalTest): Handle contextItem.

	* RunXQTS.java (main): Set pedantic mode.

	* RunXQTS.java (evalTest): Allow wildcards in expectedFailures.

2006-10-16  Per Bothner  <per@bothner.com>

	* expected-1.errs: Update for changed error message.

2006-10-13  Per Bothner  <per@bothner.com>

	* RunXQTS.java (equalsXML): Rename to matches.  In XML mode, do
	XML-aware comparison with soem canonicalization.  Specifically,
	sort attributes and namespace declarations before comparing.
	(evalTest): Use new matches function.

	*  RunXQTS.java (selectedTest): New field.
	(endGroup): Skip test if not matching selectedTest,

2006-10-04  Per Bothner  <per@bothner.com>

	* RunXQTS.java (report): Write FAIL to stderr if unexpected failure.

2006-09-30  Per Bothner  <per@bothner.com>

	* RunXQTS.java (handleStartTag): Only write date without timezone.

2006-09-29  Per Bothner  <per@bothner.com>

	* TestSuite.java: Simlify/fix so it works again after the recent
	change to have XMLPrinter extend OutPort.  Now need to force flushing.
	Use a CharArrayOutPort rather than a StringWriter.

	* use-cases.xml: Revert order of expected namespace declarations,
	to match canonical output.

	* Makefile.am (TestSuite.class): Also depend on TestMisc.class.

2006-09-28  Per Bothner  <per@bothner.com>

	* TestMisc.java: Remove invalid query.

	* XQTS-trace.exp: Update for latest XQTS.

	* RunXQTS.java: Handle Inspect results as "cannot-tell".
	Make properly namespace-compatible.  Fix so XQTS.log validates.